--- a/task5/hackernews/src/app/input-form/input-form.component.html
+++ b/task5/hackernews/src/app/input-form/input-form.component.html
@@ -4,23 +4,27 @@
       <div class="title">
         <h5>Title</h5>
         <input
+          ng-model="newNews"
+          size="30"
           type="text"
-          ng-model="newsTitleInput"
-          size="50"
-          placeholder="Type here"
+          placeholder="type in URL"
         />
       </div>
+      <!-- <h1>{{newNews}}</h1> -->
       <div class="url">
         <h5>URL</h5>
         <input
           type="text"
           ng-model="todoInput"
-          size="50"
+          size="30"
           placeholder="type in URL"
         />
       </div>
 
-      <input class="submitBtn" type="submit" value="Submit" />
+      <button 
+      class="submitBtn" 
+      type="submit" 
+      >Submit</button>
     </form>
   </div>
 </div>
