--- a/task5/src/app/components/post-lists/post/post.component.html
+++ b/task5/src/app/components/post-lists/post/post.component.html
@@ -19,10 +19,13 @@
         <h5 class="card-title">{{ post?.title }}</h5>
       </a>
 
-      <div class="bottom-btn-container">
+      <div
+        class="bottom-btn-container d-flex justify-content-center align-items-center"
+      >
         <button class="btn comment-btn">
           <i class="fa-regular fa-comments fa-lg pt-1"></i>
         </button>
+        <p>{{ post?.time | date }}</p>
         <button class="btn delete-btn">
           <i
             class="far fa-trash-alt fa-lg"
