server folder was not pushed earlier

--- a/task4&5/client/src/app/home/home.component.html
+++ b/task4&5/client/src/app/home/home.component.html
@@ -10,5 +10,5 @@
 </div>
 <div class="flex justify-center items-start mt-5">
   <app-all-news class="flex-1 flex flex-col gap-5"></app-all-news>
-  <app-news-form class="flex-1"></app-news-form>
+  <app-news-form class="flex-1 max-w-lg"></app-news-form>
 </div>
